# lailaishop

./: Cargo.toml  Makefile.toml  index.html
src/: main.rs
src/components/: cart.rs  chat.rs  mod.rs  product.rs  stream.rs
src/pages/: account.rs  home.rs  mod.rs  seller_store.rs  sign_in.rs
src/services/: analytics.rs  auth.rs  inventory.rs  mod.rs  notification.rs  payment.rs  purchase.rs  reservation.rs  server.rs
src/types/: mod.rs
